# RustAPI

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build_log.txt  deny.toml  tasks.md
.github/: CODEOWNERS  copilot-instructions.md  release-drafter.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  coverage.yml  deploy-cookbook.yml  publish.yml  release-binaries.yml  release-drafter.yml  security.yml  stale.yml
benches/rustapi_bench/: Cargo.toml
benches/rustapi_bench/benches/: extractor_bench.rs  middleware_bench.rs  websocket_bench.rs
benches/rustapi_bench/src/: lib.rs
benches/toon_bench/benches/: toon_bench.rs
crates/cargo-rustapi/: Cargo.toml  README.md
crates/cargo-rustapi/src/: cli.rs
crates/cargo-rustapi/src/commands/: add.rs  docs.rs  doctor.rs  generate.rs  mod.rs  new.rs  run.rs  watch.rs
crates/cargo-rustapi/src/templates/: full.rs  minimal.rs  mod.rs
crates/rustapi-core/: Cargo.toml  README.md
crates/rustapi-core/proptest-regressions/: error.txt  extract.txt  path_validation.txt
crates/rustapi-core/src/: app.rs  error.rs  extract.rs  handler.rs  health.rs  interceptor.rs  json.rs  lib.rs  multipart.rs  path_params.rs  path_validation.rs  request.rs  response.rs  router.rs  server.rs  sse.rs  static_files.rs  stream.rs  test_client.rs  tracing_macros.rs
crates/rustapi-core/src/middleware/: body_limit.rs  compression.rs  layer.rs  metrics.rs  mod.rs  request_id.rs  tracing_layer.rs
crates/rustapi-core/tests/: streaming_test.rs
crates/rustapi-extras/: Cargo.toml  README.md
crates/rustapi-extras/proptest-regressions/structured_logging/: formats.txt
crates/rustapi-extras/src/: api_key.rs  cache.rs  circuit_breaker.rs  dedup.rs  guard.rs  lib.rs  logging.rs  retry.rs  sanitization.rs  security_headers.rs  timeout.rs
crates/rustapi-extras/src/audit/: event.rs  file_store.rs  memory_store.rs  mod.rs  query.rs  store.rs
crates/rustapi-extras/src/config/: mod.rs
crates/rustapi-extras/src/cors/: mod.rs
crates/rustapi-extras/src/csrf/: config.rs  layer.rs  mod.rs  token.rs
crates/rustapi-extras/src/diesel/: mod.rs
crates/rustapi-extras/src/insight/: config.rs  data.rs  export.rs  layer.rs  mod.rs
crates/rustapi-extras/src/jwt/: mod.rs
crates/rustapi-extras/src/oauth2/: client.rs  config.rs  mod.rs  providers.rs  tokens.rs
crates/rustapi-extras/src/otel/: config.rs  layer.rs  mod.rs  propagation.rs
crates/rustapi-extras/src/rate_limit/: mod.rs
crates/rustapi-extras/src/sqlx/: mod.rs
crates/rustapi-extras/src/structured_logging/: config.rs  formats.rs  layer.rs  mod.rs
crates/rustapi-jobs/: Cargo.toml  README.md
crates/rustapi-jobs/proptest-regressions/: queue.txt
crates/rustapi-jobs/src/: backend.rs  error.rs  job.rs  lib.rs  queue.rs
crates/rustapi-jobs/src/backend/: memory.rs  postgres.rs  redis.rs
crates/rustapi-jobs/tests/: job_persistence_test.rs
crates/rustapi-macros/: Cargo.toml  README.md
crates/rustapi-macros/src/: lib.rs
crates/rustapi-openapi/: Cargo.toml  README.md
crates/rustapi-openapi/src/: config.rs  lib.rs  schemas.rs  spec.rs  swagger.rs
crates/rustapi-openapi/src/v31/: mod.rs  schema.rs  spec.rs  tests.rs  webhooks.rs
crates/rustapi-openapi/src/versioning/: mod.rs  router.rs  strategy.rs  tests.rs  version.rs
crates/rustapi-rs/: Cargo.toml  README.md
crates/rustapi-rs/src/: lib.rs
crates/rustapi-rs/tests/: auto_route.rs  integration_tests.rs  readme.rs
crates/rustapi-testing/: Cargo.toml  README.md
crates/rustapi-testing/src/: expectation.rs  lib.rs  matcher.rs  server.rs
crates/rustapi-testing/tests/: mock_server_test.rs
crates/rustapi-toon/: Cargo.toml  README.md
crates/rustapi-toon/src/: error.rs  extractor.rs  llm_response.rs  negotiate.rs  openapi.rs
crates/rustapi-validate/: Cargo.toml  README.md
crates/rustapi-validate/proptest-regressions/v2/: tests.txt
crates/rustapi-validate/src/: custom.rs  error.rs  lib.rs  validate.rs
crates/rustapi-validate/src/v2/: context.rs  error.rs  group.rs  mod.rs  tests.rs  traits.rs
crates/rustapi-validate/src/v2/rules/: async_rules.rs  mod.rs  sync_rules.rs
crates/rustapi-validate/tests/: derive_macro_tests.rs
crates/rustapi-view/: Cargo.toml  README.md
crates/rustapi-view/src/: context.rs  lib.rs  templates.rs  view.rs
crates/rustapi-ws/: Cargo.toml  README.md
crates/rustapi-ws/src/: auth.rs  broadcast.rs  compression.rs  error.rs  extractor.rs  heartbeat.rs  lib.rs  message.rs  socket.rs  upgrade.rs
docs/: ARCHITECTURE.md  FEATURES.md  GETTING_STARTED.md
docs/cookbook/: book.toml
docs/cookbook/theme/: custom.css
examples/auth-api/: Cargo.toml
examples/auth-api/src/: main.rs
examples/cors-test/: Cargo.toml
examples/cors-test/src/: main.rs
examples/crud-api/: Cargo.toml
examples/crud-api/src/: main.rs
examples/event-sourcing/: Cargo.toml
examples/event-sourcing/src/: main.rs
examples/graphql-api/: Cargo.toml
examples/graphql-api/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/mcp-server/: Cargo.toml  README.md
examples/mcp-server/src/: main.rs
examples/microservices-advanced/: Cargo.toml  Dockerfile  docker-compose.yml
examples/microservices-advanced/src/: order.rs  product.rs  registry.rs
examples/middleware-chain/: Cargo.toml
examples/middleware-chain/src/: main.rs
examples/phase11-demo/: Cargo.toml  README.md
examples/phase11-demo/src/: main.rs
examples/proof-of-concept/src/: main.rs  models.rs  sse.rs  stores.rs
examples/proof-of-concept/src/handlers/: auth.rs  bookmarks.rs  categories.rs  events.rs  mod.rs
examples/serverless-lambda/: Cargo.toml  README.md  template.yaml
examples/serverless-lambda/src/: main.rs
examples/sqlx-crud/: Cargo.toml
examples/sqlx-crud/src/: main.rs
examples/toon-api/src/: main.rs
examples/websocket/src/: main.rs
