[workspace]
resolver = "2"
members = [
    "crates/rustapi-rs",
    "crates/rustapi-core",
    "crates/rustapi-macros",
    "crates/rustapi-validate",
    "crates/rustapi-openapi",
    "crates/rustapi-extras",
    "crates/rustapi-toon",
    "examples/hello-world",
    "examples/sqlx-crud",
    "examples/crud-api",
    "examples/auth-api",
    "examples/proof-of-concept",
    "examples/toon-api",
    "benches/toon_bench",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
authors = ["RustAPI Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tuntii/RustAPI"
homepage = "https://github.com/Tuntii/RustAPI"
documentation = "https://docs.rs/rustapi-rs"
keywords = ["web", "framework", "api", "rest", "http"]
categories = ["web-programming::http-server"]
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Middleware
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
tower-service = "0.3"

# Utilities
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
bytes = "1.5"
matchit = "0.7"  # Radix tree router
pin-project-lite = "0.2"

# Proc macros
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
inventory = "0.3"

# Validation
validator = { version = "0.18", features = ["derive"] }

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Metrics
prometheus = "0.13"

# OpenAPI
utoipa = { version = "4.2" }

# TOON format
toon-format = { version = "0.4", default-features = false }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
rustapi-core = { path = "crates/rustapi-core", version = "0.1.2", default-features = false }
rustapi-macros = { path = "crates/rustapi-macros", version = "0.1.2" }
rustapi-validate = { path = "crates/rustapi-validate", version = "0.1.2" }
rustapi-openapi = { path = "crates/rustapi-openapi", version = "0.1.2", default-features = false }
rustapi-extras = { path = "crates/rustapi-extras", version = "0.1.2" }
rustapi-toon = { path = "crates/rustapi-toon", version = "0.1.2" }
