[workspace]
resolver = "2"
members = [
    "crates/rustapi-rs",
    "crates/rustapi-core",
    "crates/rustapi-macros",
    "crates/rustapi-validate",
    "crates/rustapi-openapi",
    "crates/rustapi-extras",
    "crates/rustapi-toon",
    "crates/rustapi-ws",
    "crates/rustapi-view",
    "crates/cargo-rustapi",
    "examples/hello-world",
    "examples/sqlx-crud",
    "examples/crud-api",
    "examples/auth-api",
    "examples/proof-of-concept",
    "examples/toon-api",
    "examples/mcp-server",
    "examples/websocket",
    "examples/templates",
    "examples/rate-limit-demo",
    # "examples/graphql-api",  # TODO: Needs API updates
    "examples/microservices",
    "examples/middleware-chain",
    "examples/cors-test",
    "benches/toon_bench",
]

[workspace.package]
version = "0.1.8"
edition = "2021"
authors = ["RustAPI Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tuntii/RustAPI"
homepage = "https://github.com/Tuntii/RustAPI"
documentation = "https://docs.rs/rustapi-rs"
keywords = ["web", "framework", "api", "rest", "http"]
categories = ["web-programming::http-server"]
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Middleware
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
tower-service = "0.3"

# Utilities
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
bytes = "1.5"
matchit = "0.7"  # Radix tree router
pin-project-lite = "0.2"

# Proc macros
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
inventory = "0.3"
linkme = "0.3"

# Validation
validator = { version = "0.18", features = ["derive"] }

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Metrics
prometheus = "0.13"

# OpenAPI
utoipa = { version = "4.2", features = ["uuid", "chrono"] }

# TOON format
toon-format = { version = "0.4", default-features = false }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# WebSocket
tokio-tungstenite = "0.24"
tungstenite = "0.24"

# Template engine
tera = "1.19"

# CLI
clap = { version = "4.5", features = ["derive", "color"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# Internal crates
rustapi-core = { path = "crates/rustapi-core", version = "0.1.7", default-features = false }
rustapi-macros = { path = "crates/rustapi-macros", version = "0.1.7" }
rustapi-validate = { path = "crates/rustapi-validate", version = "0.1.7" }
rustapi-openapi = { path = "crates/rustapi-openapi", version = "0.1.7", default-features = false }
rustapi-extras = { path = "crates/rustapi-extras", version = "0.1.7" }
rustapi-toon = { path = "crates/rustapi-toon", version = "0.1.7" }
rustapi-ws = { path = "crates/rustapi-ws", version = "0.1.7" }
rustapi-view = { path = "crates/rustapi-view", version = "0.1.7" }

