[package]
name = "cargo-rustapi"
description = "The official CLI tool for the RustAPI framework. Scaffold new projects, run development servers, and manage database migrations."
documentation = "https://docs.rs/cargo-rustapi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["web", "framework", "api", "cli", "scaffold"]
categories = ["command-line-utilities", "development-tools"]
rust-version.workspace = true
readme = "README.md"

[[bin]]
name = "cargo-rustapi"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }

# File system
walkdir = "2.5"
toml_edit = "0.22"

# Async
tokio = { workspace = true, features = ["process", "fs"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
