[package]
name = "rustapi-core"
description = "Core library for RustAPI framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio = { workspace = true }
futures-util = { workspace = true }
pin-project-lite = { workspace = true }

# HTTP
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

# Router
matchit = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"

# Middleware
tower = { workspace = true }
tower-service = { workspace = true }
tower-http = { workspace = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
inventory = { workspace = true }

# Validation
rustapi-validate = { workspace = true }

# OpenAPI
rustapi-openapi = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
