[package]
name = "rustapi-macros"
description = "Procedural macros for RustAPI. Includes #[get], #[post], #[derive(Schema)], and #[derive(Validate)] for compile-time magic."
documentation = "https://docs.rs/rustapi-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

# Note: async-trait is used in generated code, not in the macro itself
# Users need to have async-trait available when using the Validate derive
