[package]
name = "rustapi-openapi"
description = "OpenAPI documentation generator for RustAPI framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core types
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# OpenAPI schema generation
utoipa = { workspace = true }



