[package]
name = "rustapi-openapi"
description = "Automated OpenAPI 3.0 specification generator for RustAPI. Integrates Swagger UI."
documentation = "https://docs.rs/rustapi-openapi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Core types
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# OpenAPI schema generation
utoipa = { workspace = true }



[features]
default = ["swagger-ui"]
swagger-ui = []
