[package]
name = "rustapi-rs"
description = "A FastAPI-like web framework for Rust - DX-first, type-safe, batteries included"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
rustapi-core = { workspace = true, default-features = false }
rustapi-macros = { workspace = true }

# Re-exports for user convenience
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
rustapi-openapi = { workspace = true, default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["swagger-ui"]
swagger-ui = ["rustapi-core/swagger-ui", "rustapi-openapi/swagger-ui"]
