[package]
name = "rustapi-validate"
description = "Type-safe request validation for RustAPI. Wrapper around the `validator` crate with deep framework integration."
documentation = "https://docs.rs/rustapi-validate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Validation (internal - not exposed in public API)
validator = { version = "0.18", features = ["derive"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# HTTP types for response
http = { workspace = true }

# Async support for v2 validation
async-trait = { workspace = true }

# Regex for pattern validation
regex = "1.10"

# Re-export derive macro
rustapi-macros = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
proptest = "1.4"
