[package]
name = "cors-test"
version = "0.1.0"
edition = "2021"

[dependencies]
rustapi-rs = { path = "../../crates/rustapi-rs", features = ["cors", "rate-limit"] }
rustapi-macros = { path = "../../crates/rustapi-macros" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
