[package]
name = "crud-api"
version = "0.1.0"
edition = "2021"
publish = false
description = "CRUD API example demonstrating all RustAPI features"

[dependencies]
rustapi-rs = { path = "../../crates/rustapi-rs", features = ["full"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
validator = { workspace = true }
utoipa = { workspace = true }
