[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rustapi-rs = { path = "../../crates/rustapi-rs" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
validator = { workspace = true }
utoipa = { workspace = true }
