[package]
name = "microservices-advanced"
version = "0.1.0"
edition = "2021"

[dependencies]
rustapi-rs = { path = "../../crates/rustapi-rs" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = "5.5"
uuid = { workspace = true, features = ["v4", "serde"] }
utoipa = { workspace = true }

[[bin]]
name = "service-registry"
path = "src/registry.rs"

[[bin]]
name = "product-service"
path = "src/product.rs"

[[bin]]
name = "order-service"
path = "src/order.rs"
