[package]
name = "middleware-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
rustapi-rs = { path = "../../crates/rustapi-rs", features = ["jwt", "cors"] }
rustapi-core = { path = "../../crates/rustapi-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
utoipa = "4.2"
http = "1"
