[package]
name = "phase11-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
rustapi-rs = { path = "../../crates/rustapi-rs", features = ["full"] }
rustapi-core = { path = "../../crates/rustapi-core" }
rustapi-macros = { path = "../../crates/rustapi-macros" }
rustapi-extras = { path = "../../crates/rustapi-extras", features = [
    "timeout",
    "guard",
    "logging",
    "circuit-breaker",
    "jwt",
] }
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "4.2" }

[features]
default = ["timeout", "logging", "circuit-breaker"]
timeout = []
guard = []
logging = []
circuit-breaker = []
