[package]
name = "serverless-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.9"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
