[package]
name = "sqlx-crud"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rustapi-rs = { path = "../../crates/rustapi-rs" }
rustapi-extras = { path = "../../crates/rustapi-extras", features = ["sqlx"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
utoipa = { workspace = true }
